apps/zabbix/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zabbix-server
  namespace: mon-zabbix
  labels:
    app: zabbix-server
spec:
  serviceName: zabbix-server-headless
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      containers:
        - name: zabbix-server
          image: zabbix/zabbix-server-pgsql:alpine-6.4-latest
          ports:
            - name: zabbix-trapper
              containerPort: 10051
              protocol: TCP
          
          resources:
            requests:
              cpu: 2000m
              memory: 8Gi
            limits:
              cpu: 4000m
              memory: 16Gi
          
          volumeMounts:
            - name: alertscripts
              mountPath: /usr/lib/zabbix/alertscripts
            - name: externalscripts
              mountPath: /usr/lib/zabbix/externalscripts
      
      volumes:
        - name: alertscripts
          persistentVolumeClaim:
            claimName: zabbix-alertscripts
        - name: externalscripts
          persistentVolumeClaim:
            claimName: zabbix-externalscripts

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  namespace: mon-zabbix
  labels:
    app: zabbix-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zabbix-web
  template:
    metadata:
      labels:
        app: zabbix-web
    spec:
      containers:
        - name: zabbix-web
          image: zabbix/zabbix-web-nginx-pgsql:alpine-6.4-latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 4Gi

---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: mon-zabbix
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.30.61"
spec:
  type: LoadBalancer
  selector:
    app: zabbix-server
  ports:
    - name: zabbix-trapper
      port: 10051
      targetPort: 10051
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: mon-zabbix
spec:
  type: ClusterIP
  selector:
    app: zabbix-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web
  namespace: mon-zabbix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: core-sso-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zabbix.zsel.opole.pl
      secretName: zabbix-tls
  rules:
    - host: zabbix.zsel.opole.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-web
                port:
                  number: 8080
